# moltenVK-playground

./: .gitignore  CMakeLists.txt  flake.nix
include/: buffer.hpp  descriptor.hpp  fresnel_push_constants.hpp  init.hpp  mesh.hpp  pipeline.hpp  render_pass.hpp  shader.hpp  ubo.hpp  vk_types.hpp
shader/schlick-fresnel/: sf.frag  sf.vert
src/: init.cpp  main.cpp  pipeline.cpp  vk_types.cpp
test/: CMakeLists.txt  test_init.cpp
